# bmh05108_batch

./: .gitignore  ARCHITECTURE.md  generate_samples.py  pyproject.toml
analysis/: regression_starter.ipynb
src/bmh05108_batch/: body270.py  cli.py  device.py  io_csv.py  orchestrator.py  protocol.py  worker.py
tests/: test_body270.py  test_protocol.py
