[project]
name = "bmh05108-batch"
version = "0.1.0"
description = "Industrial batch runner for BMH05108 Body270 bioimpedance module"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "typer>=0.12",
    "rich>=13.7",
    "pandas>=2.2",
]

[project.scripts]
bmh05108-batch = "bmh05108_batch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bmh05108_batch"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 10
